# guiorder

./: Cargo.toml  README.md
src/: analysis_types.rs  common.rs  convert.rs  error.rs  estimate_error.rs  frame_selection.rs  geometry.rs  leaflets.rs  main.rs  membrane_normal.rs  ordermaps.rs  other_options.rs  window.rs
tests/: exported.yaml  index.ndx  parameters.yaml  pcpepg.tpr
tests/output/: convergence.xvg  order.csv  order.tab  order.yaml  order_POPC.xvg
tests/output/ordermaps/: plot.py
