[package]
name = "guiorder"
version = "0.1.0"
edition = "2021"

[dependencies]
colog = "1.3.0"
colored = "3.0.0"
eframe = "0.31.1"
gorder = { git = "https://github.com/Ladme/gorder", rev = "259c530a2496fffb8bb657a553096ed59c6936dd" }
log = "0.4.27"
regex = "1.11.1"
rfd = "0.15.3"
thiserror = "2.0.12"

[dev-dependencies]
approx = "0.5.1"
