[package]
name = "guiorder"
version = "0.1.0"
edition = "2021"
description = "GUI for the gorder package"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/Ladme/guiorder"
keywords = ["gromacs", "molecular-dynamics", "order", "nmr", "lipids"]
categories = ["command-line-utilities", "science"]
exclude = ["/tests"]

[dependencies]
colog = "1.3.0"
colored = "3.0.0"
eframe = "0.31.1"
gorder = { git = "https://github.com/Ladme/gorder", rev = "0e359f8" }
log = "0.4.27"
regex = "1.11.1"
rfd = "0.15.3"
serde_yaml = "0.9.34"
thiserror = "2.0.12"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.20.0"
